# chaotic_data_recovery

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: index.html  research_notes.md
notebooks/: frankenstein_data_recovery_demo.ipynb
src/chaotic_data_recovery/: __init__.py  __main__.py  data_recovery_engine.py
src/chaotic_data_recovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_data_recovery_engine.py
