[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaotic-data-recovery"
version = "0.1.0"
description = "Industrial-grade fail-safe ingestion and recovery pipeline for chaotic business data files"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GitHub Copilot" }]
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "openpyxl>=3.1.3",
  "clevercsv>=0.8.4",
  "ftfy>=6.3.1",
  "dateparser>=1.2.2",
  "Unidecode>=1.4.0",
  "charset-normalizer>=3.3.2",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
